# SimAgentPlg

./: .env.example  .env_example  .gitignore  .gitmodules  GODOT_CLIENT_PLAN.md  Handoff：Agent Core 与 Tool Middleware 重构进展.md  Handoff：从 Pi Agent 学习 Agent Harness 工程设计.md  README.md  README_GAME.md  README_zh-CN.md  TOOL_PROTOCOL.md  agent_loop_minimal.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
NapcatBot/: egg_bot.py
clients/godot/: README.md
clients/godot/SimAgentGodotClient/: project.godot
docs/: pi-harness-gap-analysis.md
example/: 01_stateful_chat.py  02_custom_tool.py  03_multi_agent.py  04_mcp_tools.py  05_role_workflow.py  06_skill.py  07_bash_approval.py  07_god_simulator.py  08_god_simulator_web.py  README.md
example/skills/release_notes/: template.md
examples/: 01_stateful_chat.py  02_custom_tool.py  03_multi_agent.py  04_mcp_tools.py  05_skill.py  06_skill.py  07_bash_approval.py  07_event_observers.py  08_session_resume.py  09_runtime_control.py  10_composed_harness.py  11_streaming_events.py  12_tool_progress.py  13_usage_budget.py  14_context_pressure.py  15_explicit_compaction.py  16_durable_session.py  17_session_tree.py  README.md  mcp_config.json
examples/skills/release_notes/: SKILL.md
src/AllAgent/: logger.py  struct.py
src/AllAgent/MCP/: mcp_config.json  mcp_manager.py
src/AllAgent/Plugins/: __init__.py
src/AllAgent/agent/: base.py
src/allagent/: logger.py
src/allagent/agent/: __init__.py  base.py
src/simagentplg/: __init__.py  logger.py
src/simagentplg/agent/: __init__.py  base.py  cancellation.py  compaction.py  context.py  context_builder.py  context_management.py  events.py  manager.py  middleware.py  model_compactor.py  orchestrator.py  result.py  runtime_policy.py  state.py  tool_runtime.py  tool_schema.py  types.py  usage.py  workflow.py
tests/: mcp_test.py  package_artifact_smoke.py  public_api_smoke.py  react_test.py  skill_test.py  test_agent.py  test_agent_cancellation.py  test_agent_events.py  test_agent_session.py  test_agent_streaming.py  test_auto_compaction.py  test_context_compaction.py  test_context_management.py  test_examples.py  test_finish_handler.py  test_game.py  test_game_web.py  test_gitdiff_handler.py  test_manager.py  test_mcp_manager.py  test_model_compactor.py  test_provider_errors.py  test_session_persistence.py  test_tool_progress.py  test_usage_budget.py  test_workflow.py
tests/mcp_tets/: mcp_test.py
(+69 files in other folders)
