[project]
name = "SimAgentPlg"
version = "0.2.1"
description = "A lightweight multi-agent framework with ReAct reasoning, tool dispatch, and MCP integration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simagentplg"]
