[project]
name = "SimAgentPlg"
version = "0.2.3"
description = "A lightweight multi-agent framework with ReAct reasoning, tool dispatch, and MCP integration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "fastmcp>=3.4.2",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simagentplg"]
