[project]
name = "SimAgentPlg"
version = "0.2.4"
description = "A lightweight stateful agent framework with ReAct reasoning, tool dispatch, and MCP integration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.4.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simagentplg"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.gitmodules",
    "/pi",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ASYNC", "B", "E4", "E7", "E9", "F", "I", "UP"]
ignore = [
    "B027",  # Lifecycle base classes intentionally provide optional no-op hooks.
    "UP040", # Preserve runtime-compatible public TypeAlias values.
]

[tool.mypy]
python_version = "3.12"
files = ["src/simagentplg"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
